--- a/src/main/resources/pages/LoadScreenView.fxml
+++ b/src/main/resources/pages/LoadScreenView.fxml
@@ -38,7 +38,7 @@
                            styleClass="text-medium-normal, error-text" visible="false"/>
                 </HBox>
                 <HBox fx:id="buttonBox" alignment="CENTER_RIGHT" maxWidth="400">
-                    <Button onAction="#runAcv" text="RUN VIEWER" styleClass="button-gray, text-medium-normal"/>
+                    <Button onAction="#runAcv" text="RUN VIEWERg" styleClass="button-gray, text-medium-normal"/>
                 </HBox>
             </VBox>
         </StackPane>
