--- a/src/main/resources/pages/AcvContent.fxml
+++ b/src/main/resources/pages/AcvContent.fxml
@@ -73,7 +73,7 @@
                                         </padding>
                                     </Label>
                                 </HBox>
-                                <AnnotatedDocumentPane fx:id="targetPane" minWidth="300" maxWidth="375"/>
+                                <AnnotatedDocumentPane fx:id="systemOutPane" minWidth="300" maxWidth="375"/>
                             </VBox>
                             <VBox>
                                 <HBox>
